eog (2.18.0.1-2) UNRELEASED; urgency=low

  * Include the new check-dist Makefile to prevent accidental uploads to
    unstable; bump build-dep on gnome-pkg-tools to >= 0.10.
  * Set LDFLAGS directly instead of via DEB_CONFIGURE_SCRIPT_ENV; build-dep on
    cdbs >= 0.4.41.
  * Preprend -Wl,-z,defs before -Wl,--as-needed in LDFLAGS.
  * Upload to unstable; drop check-dist include.

 -- Loic Minier <lool@dooz.org>  Wed, 25 Apr 2007 15:25:36 +0200

eog (2.18.0.1-1) experimental; urgency=low

  * New upstream release:
    - debian/control.in:
      + Updated build-depends to new requirements
      + Added new dependency on gnome-icon-theme, as eog now uses icons from
        there.
    - debian/patches/01_error-loading.patch:
       Dropped, included upstream.
    - Changed scroll wheel behaviour to not switch images, but actually
      scroll. (Closes: #414128)
    - Fixed handling of external file removal. (Closes: #370452)
    - Fixed segfaults when exiting the collection view. (Closes: #404325)

 -- Marc 'HE' Brockschmidt <he@debian.org>  Sun, 25 Mar 2007 13:17:10 +0200

eog (2.16.3-3) unstable; urgency=medium

  [ Sven Arvidsson ]
  * New patch, 01_error-loading, show an error message instead of 
    closing the program if the image loading has failed; thanks
    Claudio Saavedra. GNOME #399988 (Closes: #391582)

 -- Sven Arvidsson <sa@whiz.se>  Tue, 27 Feb 2007 15:07:47 +0100

eog (2.16.3-2) unstable; urgency=low

  * Upload to unstable.

 -- Loic Minier <lool@dooz.org>  Sat,  3 Feb 2007 11:45:07 +0100

eog (2.16.3-1) experimental; urgency=low

  * New upstream stable release; bug fixes and translation updates.

 -- Loic Minier <lool@dooz.org>  Mon, 29 Jan 2007 22:07:49 +0100

eog (2.16.2-2) UNRELEASED; urgency=low

  * Add a get-orig-source target to retrieve the upstream tarball.

 -- Loic Minier <lool@dooz.org>  Tue,  9 Jan 2007 14:22:57 +0100

eog (2.16.2-1) unstable; urgency=low

  * New upstream stable release with code cleanups and translations.
