@@ -4,11 +4,34 @@ Priority: optional
 Maintainer: Guilherme de S. Pastore <gpastore@debian.org>
 Uploaders: Debian GNOME Maintainers <pkg-gnome-maintainers@lists.alioth.debian.org>, Loic Minier <lool@dooz.org>, Marc 'HE' Brockschmidt <he@debian.org>
 Standards-Version: 3.7.2
-Build-Depends: cdbs (>= 0.4.41), debhelper (>= 4.2.27), libgconf2-dev (>= 2.6.1-2), libgnomecanvas2-dev (>= 2.6.1.1-2), libgnomeui-dev (>= 2.6.1.1-2), libgnomevfs2-dev (>= 2.6.1.1-3), libgtk2.0-dev (>= 2.10), libglade2-dev (>= 2.3.6), libxml2-dev, scrollkeeper, libjpeg62-dev, libpng12-dev, zlib1g-dev, libexif-dev (>= 0.6.12), libxt-dev, libxml-parser-perl, gnome-pkg-tools (>= 0.10), liblcms-dev, libart-2.0-dev (>= 2.3.16), libgnome-desktop-dev (>= 2.10.0), gnome-doc-utils, gnome-icon-theme (>= 2.17.1)
+Build-Depends: cdbs (>= 0.4.41),
+               debhelper (>= 4.2.27),
+               libgconf2-dev (>= 2.6.1-2),
+               libgnomecanvas2-dev (>= 2.6.1.1-2),
+               libgnomeui-dev (>= 2.6.1.1-2),
+               libgnomevfs2-dev (>= 2.6.1.1-3),
+               libgtk2.0-dev (>= 2.10),
+               libglade2-dev (>= 2.3.6),
+               libxml2-dev,
+               scrollkeeper,
+               libjpeg62-dev,
+               libpng12-dev,
+               zlib1g-dev,
+               libexif-dev (>= 0.6.12),
+               libxt-dev,
+               libxml-parser-perl,
+               gnome-pkg-tools (>= 0.10),
+               liblcms-dev,
+               libart-2.0-dev (>= 2.3.16),
+               libgnome-desktop-dev (>= 2.10.0),
+               gnome-doc-utils,
+               gnome-icon-theme (>= 2.17.1)
 
 Package: eog
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, gnome-icon-theme (>= 2.17.1)
+Depends: ${shlibs:Depends},
+         ${misc:Depends},
+         gnome-icon-theme (>= 2.17.1)
 Recommends: librsvg2-common
 Conflicts: eog2
 Description: Eye of Gnome graphics viewer program
