@@ -6,8 +6,9 @@ eog (2.18.0.1-2) UNRELEASED; urgency=low
     cdbs >= 0.4.41.
   * Preprend -Wl,-z,defs before -Wl,--as-needed in LDFLAGS.
   * Upload to unstable; drop check-dist include.
+  * Wrap build-deps and deps.
 
- -- Loic Minier <lool@dooz.org>  Wed, 25 Apr 2007 15:25:36 +0200
+ -- Loic Minier <lool@dooz.org>  Wed, 25 Apr 2007 15:26:45 +0200
 
 eog (2.18.0.1-1) experimental; urgency=low
 
